# soar

./: .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  UNIT_TESTS_SUMMARY.md  deny.toml  install.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: aur.yaml  ci.yaml  codeql.yml  deny.yml  nightly.yaml  release-plz.yml  release.yaml
.hive/: issues.jsonl
completions/: soar.bash
crates/soar-cli/: Cargo.toml  build.rs
crates/soar-cli/src/: apply.rs  cli.rs  download.rs  health.rs  inspect.rs  install.rs  json2db.rs  list.rs  logging.rs  main.rs  nest.rs  progress.rs  remove.rs  repo.rs  run.rs  self_actions.rs  state.rs  update.rs  use.rs  utils.rs
crates/soar-config/: CHANGELOG.md  Cargo.toml
crates/soar-config/src/: annotations.rs  config.rs  display.rs  error.rs  lib.rs  packages.rs  profile.rs  repository.rs  test_utils.rs  utils.rs
crates/soar-core/: CHANGELOG.md  Cargo.toml
crates/soar-core/src/: constants.rs  error.rs  lib.rs  sandbox.rs  utils.rs
crates/soar-core/src/database/: connection.rs  models.rs
crates/soar-core/src/package/: hooks.rs  install.rs  local.rs  mod.rs  query.rs  release_source.rs  remote_update.rs  remove.rs  update.rs  url.rs
crates/soar-db/: CHANGELOG.md  Cargo.toml
crates/soar-db/migrations/core/2025-10-19-024753-0000_create_packages/: up.sql
crates/soar-db/migrations/core/2025-10-19-081644-0000_create_portable_packages/: down.sql  up.sql
crates/soar-db/migrations/core/2026-01-15-000000-0000_drop_with_pkg_id/: down.sql  up.sql
crates/soar-db/migrations/metadata/2025-10-19-095216-0000_create_packages/: up.sql
crates/soar-db/migrations/metadata/2025-10-19-095346-0000_create_repository/: up.sql
crates/soar-db/migrations/metadata/2025-10-19-095351-0000_create_maintainers/: down.sql  up.sql
crates/soar-db/migrations/metadata/2025-10-19-095356-0000_create_package_maintainers/: down.sql  up.sql
crates/soar-db/migrations/nest/2025-10-19-094440-0000_create_nests/: down.sql  up.sql
crates/soar-db/src/: connection.rs  error.rs  helpers.rs  lib.rs  macros.rs  migration.rs  traits.rs
crates/soar-db/src/expr/: column.rs  json.rs  mod.rs  ops.rs
crates/soar-db/src/models/: core.rs  metadata.rs  mod.rs  nest.rs  types.rs
crates/soar-db/src/query/: builder.rs  clause.rs  delete.rs  insert.rs  mod.rs  select.rs  state.rs  update.rs
crates/soar-db/src/repository/: core.rs  metadata.rs  mod.rs  nest.rs
crates/soar-db/src/schema/: core.rs  metadata.rs  mod.rs  nest.rs
crates/soar-dl/: CHANGELOG.md  Cargo.toml  TEST_SUMMARY.md
crates/soar-dl/src/: download.rs  error.rs  filter.rs  github.rs  gitlab.rs  http.rs  http_client.rs  lib.rs  oci.rs  platform.rs  release.rs  traits.rs  types.rs  utils.rs  xattr.rs
crates/soar-events/: CHANGELOG.md  Cargo.toml
crates/soar-events/src/: event.rs  lib.rs  sink.rs
crates/soar-operations/: CHANGELOG.md  Cargo.toml
crates/soar-operations/src/: apply.rs  context.rs  health.rs  install.rs  lib.rs  list.rs  progress.rs  remove.rs  repo.rs  run.rs  search.rs  switch.rs  sync.rs  types.rs  update.rs  utils.rs
crates/soar-package/: CHANGELOG.md  Cargo.toml
crates/soar-package/src/: error.rs  lib.rs  traits.rs
crates/soar-package/src/formats/: appimage.rs  common.rs  mod.rs  onelf.rs  wrappe.rs
crates/soar-registry/: CHANGELOG.md  Cargo.toml
crates/soar-registry/src/: error.rs  lib.rs  metadata.rs  nest.rs  package.rs
crates/soar-utils/: CHANGELOG.md  Cargo.toml
crates/soar-utils/src/: bytes.rs  error.rs  fs.rs  hash.rs  lib.rs  lock.rs  path.rs  pattern.rs  string.rs  system.rs  time.rs  user.rs
docs/: README.md  cli-reference.md  configuration.md  declarative.md  download.md  health.md  index.md  inspection.md  install.md  installation.md  list.md  maintenance.md  package-management.md  package.json  profiles.md  quick-start.md  releases.md  remove.md  repo.md  run.md  search.md  update.md  use.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: InstallCommand.vue  NotFound.vue  QuickNav.vue
docs/releases/: v0.10.md  v0.12.md
soar-cli/: Cargo.toml
soar-cli/src/: cli.rs  download.rs  health.rs  inspect.rs  install.rs  list.rs  logging.rs  main.rs  nest.rs  progress.rs  remove.rs  run.rs  self_actions.rs  state.rs  update.rs  use.rs  utils.rs
soar-core/: CHANGELOG.md  Cargo.toml
soar-core/migrations/core/: V1_initial.sql  V2_optional_columns.sql  V3_cascade_on_delete.sql  V4_alter_packages_table.sql  V5_alter_package_and_portable_packages.sql  V5_baseline.sql  V6_add_portable_cache.sql
soar-core/migrations/metadata/: V1_initial.sql
soar-core/src/: config.rs  constants.rs  error.rs  lib.rs  metadata.rs  repositories.rs  toml.rs  utils.rs
soar-core/src/database/: connection.rs  migration.rs  mod.rs  models.rs  repository.rs  statements.rs
soar-core/src/database/nests/: models.rs  repository.rs
soar-core/src/package/: install.rs  mod.rs  query.rs  remove.rs
soar-core/src/package/formats/: appimage.rs  common.rs  mod.rs  wrappe.rs
soar-db/migrations/core/: V1__initial.sql
