[workspace]
resolver = "2"
members = [
  "crates/soar-cli",
  "crates/soar-config",
  "crates/soar-core",
  "crates/soar-db",
  "crates/soar-dl",
  "crates/soar-package",
  "crates/soar-registry",
  "crates/soar-utils",
]

[workspace.package]
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pkgforge/soar"
license = "MIT"
keywords = ["appimage", "binary", "linux", "package-manager", "portable"]
categories = ["command-line-utilities"]

[workspace.dependencies]
blake3 = { version = "1.8.2", features = ["mmap"] }
chrono = "0.4"
compak = "0.1.0"
diesel = { version = "2.3.5", features = [
  "64-column-tables",
  "returning_clauses_for_sqlite_3_35",
  "serde_json",
  "sqlite"
] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
documented = "0.9.2"
fast-glob = "1.0.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
libsqlite3-sys = { version = ">=0.30.1,<0.36.0", features = [ "bundled" ]}
miette = { version = "7.6.0", features = ["fancy"] }
nix = { version = "0.30.1", features = ["ioctl", "term", "user"] }
percent-encoding = "2.3.2"
rayon = "1.11.0"
regex = { version = "1.12.2", default-features = false, features = [
  "std",
  "unicode-case",
  "unicode-perl"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.146", features = ["indexmap"] }
serial_test = "3.2.0"
soar-cli = { path = "crates/soar-cli" }
soar-config = { path = "crates/soar-config" }
soar-core = { path = "crates/soar-core" }
soar-db = { path = "crates/soar-db" }
soar-dl = { path = "crates/soar-dl" }
soar-package = { path = "crates/soar-package" }
soar-registry = { path = "crates/soar-registry" }
soar-utils = { path = "crates/soar-utils" }
squishy = { version = "0.3.2", features = ["appimage"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.10"
toml_edit = "0.23.10"
tracing = { version = "0.1.44", default-features = false }
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"
xattr = "1.6.1"
zstd = "0.13.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
