[workspace]
resolver = "2"
members = [
  "crates/soar-cli",
  "crates/soar-config",
  "crates/soar-core",
  "crates/soar-db",
  "crates/soar-dl",
  "crates/soar-events",
  "crates/soar-operations",
  "crates/soar-package",
  "crates/soar-registry",
  "crates/soar-utils",
]

[workspace.package]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pkgforge/soar"
license = "MIT"
keywords = ["appimage", "binary", "linux", "package-manager", "portable"]
categories = ["command-line-utilities"]
rust-version = "1.88"

[workspace.dependencies]
blake3 = { version = "1.8.5", features = ["mmap"] }
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_complete = "4.6.5"
chrono = "0.4"
compak = "0.1.2"
diesel = { version = "2.3.10", features = [
  "64-column-tables",
  "returning_clauses_for_sqlite_3_35",
  "serde_json",
  "sqlite"
] }
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
documented = "0.9.2"
fast-glob = "1.0.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
indicatif = "0.18"
landlock = "0.4.5"
libsqlite3-sys = { version = ">=0.30.1,<0.36.0", features = [ "bundled" ]}
miette = { version = "7.6.0", features = ["fancy"] }
minisign-verify = "0.2.5"
nix = { version = "0.31.3", features = ["fs", "ioctl", "term", "user"] }
nucleo-matcher = "0.3.1"
nu-ansi-term = "0.50.3"
once_cell = "1.21"
percent-encoding = "2.3.2"
rayon = "1.12.0"
regex = { version = "1.12.4", default-features = false, features = [
  "std",
  "unicode-case",
  "unicode-perl"
] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["indexmap"] }
serial_test = "3.5.0"
sha2 = "0.11.0"
soar-config = { version = "0.10.0", path = "crates/soar-config" }
soar-core = { version = "0.16.3", path = "crates/soar-core" }
soar-db = { version = "0.5.4", path = "crates/soar-db" }
soar-dl = { version = "0.10.1", path = "crates/soar-dl" }
soar-events = { version = "0.1.0", path = "crates/soar-events" }
soar-operations = { version = "0.3.1", path = "crates/soar-operations" }
soar-package = { version = "0.4.1", path = "crates/soar-package" }
soar-registry = { version = "0.5.0", path = "crates/soar-registry" }
soar-utils = { version = "0.4.2", path = "crates/soar-utils" }
squishy = { version = "0.5.1", features = ["appimage", "dwarfs"] }
tabled = { version = "0.21", features = ["ansi"] }
terminal_size = "0.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "json", "nu-ansi-term"] }
ureq = { version = "3.3.0", features = ["json"] }
url = "2.5.8"
xattr = "1.6.1"
zstd = "0.13.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
