[package]
name = "soar-cli"
version = "0.5.3"
description = "A modern package manager for Linux"
default-run = "soar"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "soar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
futures = { workspace = true }
indicatif = "0.17.9"
nu-ansi-term = "0.50.1"
once_cell = "1.20.2"
rand = "0.8.5"
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-core = { version = "0.1.3", path = "../soar-core" }
soar-dl = { workspace = true }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "json", "nu-ansi-term"] }
