[package]
name = "soar-cli"
version = "0.8.1"
description = "A modern package manager for Linux"
default-run = "soar"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "soar"
path = "src/main.rs"

[features]
self = []

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive"] }
indicatif = "0.18.0"
minisign-verify = "0.2.4"
nu-ansi-term = "0.50.1"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
semver = "1.0.27"
serde = { workspace = true }
serde_json = { workspace = true }
soar-config = { workspace = true }
soar-core = { workspace = true }
soar-dl = { workspace = true }
soar-registry = { workspace = true }
soar-utils = { workspace = true }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9.6"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "json", "nu-ansi-term"] }
ureq = { workspace = true }
