[package]
name = "soar-core"
version = "0.7.0"
description = "Core library for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
blake3 = { version = "1.8.2", features = ["mmap"] }
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
documented = "0.9.2"
futures = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
include_dir = "0.7.4"
nix = { version = "0.30.1", features = ["ioctl", "term", "user"] }
once_cell = "1.21.3"
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-dl = { workspace = true }
squishy = { version = "0.3.2", features = ["appimage"] }
thiserror = "2.0.16"
toml = "0.9.6"
toml_edit = "0.23.5"
tracing = { workspace = true }
zstd = "0.13.3"
