[package]
name = "soar-core"
version = "0.8.1"
description = "Core library for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
include_dir = "0.7.4"
nix = { version = "0.30.1", features = ["ioctl", "term", "user"] }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-config = { workspace = true }
soar-dl = { workspace = true }
soar-registry = { workspace = true }
soar-utils = { workspace = true }
squishy = { version = "0.3.2", features = ["appimage"] }
thiserror = "2.0.16"
toml = "0.9.6"
tracing = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
zstd = "0.13.3"
