[package]
name = "soar-cli"
version = "0.10.2"
description = "A modern package manager for Linux"
default-run = "soar"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "soar"
path = "src/main.rs"

[features]
self = []

[dependencies]
clap = { version = "4.5.54", features = ["cargo", "derive"] }
indicatif = "0.18.3"
miette = { workspace = true }
minisign-verify = "0.2.4"
nix = { workspace = true }
nu-ansi-term = "0.50.3"
once_cell = "1.21.3"
rayon = { workspace = true }
regex = { workspace = true }
semver = "1.0.27"
serde = { workspace = true }
serde_json = { workspace = true }
soar-config = { workspace = true }
soar-core = { workspace = true }
soar-db = { workspace = true }
soar-dl = { workspace = true }
soar-package = { workspace = true }
soar-registry = { workspace = true }
soar-utils = { workspace = true }
tabled = { version = "0.20", features = ["ansi"] }
terminal_size = "0.4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9.10"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "fmt", "json", "nu-ansi-term"] }
ureq = { workspace = true }
