[package]
name = "soar-core"
version = "0.8.1"
description = "Core library for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
miette = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-config = { workspace = true }
soar-db = { workspace = true }
soar-dl = { workspace = true }
soar-package = { workspace = true }
soar-utils = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
