[package]
name = "soar-core"
version = "0.10.0"
description = "Core library for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"]

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
fast-glob = { workspace = true }
libsqlite3-sys = { workspace = true }
miette = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
soar-config = { workspace = true }
soar-db = { workspace = true }
soar-dl = { workspace = true }
soar-package = { workspace = true }
soar-utils = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
