[package]
name = "soar-db"
version = "0.3.1"
description = "Database operations for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"]

[dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-registry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
