[package]
name = "soar-dl"
version = "0.7.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
compak = { workspace = true }
fast-glob = { workspace = true }
miette = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soar-utils = { path = "../soar-utils" }
thiserror = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
xattr = { workspace = true }
