[package]
name = "soar-utils"
version = "0.3.0"
description = "Utilities for soar package manager"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
blake3 = { workspace = true }
miette = { workspace = true }
nix = { workspace = true }
serial_test = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
